accessibility contrast fixes. mobile view size fixes. update bad link to netbadge info site.

--- a/frontend/src/assets/forms.scss
+++ b/frontend/src/assets/forms.scss
@@ -16,10 +16,10 @@ select,
 .dpg-form-input {
    padding: 0.5em 0.6em;
    display: inline-block;
-   border: 1px solid #ccc;
-   -webkit-box-shadow: inset 0 1px 3px #ddd;
-   box-shadow: inset 0 1px 3px #ddd;
-   border-radius: 4px;
+   border: 1px solid var(--uvalib-grey-light);;
+   -webkit-box-shadow: inset 0 1px 3px var(--uvalib-grey-light);
+   box-shadow: inset 0 1px 3px var(--uvalib-grey-light);
+   border-radius: 0.3rem;
    vertical-align: middle;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
@@ -38,7 +38,7 @@ button.dpg-form-input {
    }
    fieldset {
       border: 1px solid var(--uvalib-grey-light);
-      border-radius: 5px;
+      border-radius: 0.3rem;
       legend {
          padding: 0 5px;
       }
@@ -71,6 +71,7 @@ div.formkit-steps {
    box-shadow: none !important;
    border-color: var(--uvalib-grey-light) !important;
    margin-bottom: 50px;
+   border-radius: 0.3rem;
    .formkit-step-inner {
       display: flex;
       flex-direction: column;
@@ -93,7 +94,12 @@ div.formkit-steps {
       margin-top: 20px;
    }
 }
-
+div.formkit-tabs {
+   margin-bottom: 3em !important;
+   span.formkit-tab-label {
+      white-space: break-spaces !important;
+   }
+}
 div.formkit-help {
    text-align: left;
    margin-top: 10px;
@@ -104,7 +110,7 @@ div.formkit-help {
    list-style: none;
    padding: 0;
    margin: 5px 0;
-   color: var(--uvalib-red-emergency);
+   color: var(--uvalib-red-dark);
    text-align: left;
 }
 
